add_executable ( hwk_0_1 hwk_0_1.cpp)
add_executable ( hwk_0_2 hwk_0_2.cpp)
add_executable ( hwk_0_3 hwk_0_3.cpp)
add_executable ( hwk_0_4 hwk_0_4.cpp)
add_executable ( hwk_0_5 hwk_0_5.cpp)
add_executable ( hwk_0_6 hwk_0_6.cpp)
add_executable ( hwk_0_7 hwk_0_7.cpp)
add_executable ( hwk_0_8 hwk_0_8.cpp)

add_executable ( hwk_1_1 hwk_1_1.cpp)
add_executable ( hwk_1_2 hwk_1_2.cpp)
add_executable ( hwk_1_3 hwk_1_3.cpp)
add_executable ( hwk_1_4 hwk_1_4.cpp)
add_executable ( hwk_1_5 hwk_1_5.cpp)
add_executable ( hwk_1_6 hwk_1_6.cpp)
add_executable ( hwk_1_7 hwk_1_7.cpp)
add_executable ( hwk_1_8 hwk_1_8.cpp)
add_executable ( hwk_1_9 hwk_1_9.cpp)
add_executable ( hwk_1_10 hwk_1_10.cpp)
add_executable ( hwk_1_11 hwk_1_11.cpp)
add_executable ( hwk_1_12 hwk_1_12.cpp)
add_executable ( hwk_1_13 hwk_1_13.cpp)